# LLaMPPL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  pyproject.toml  setup.py
examples/: constraint.py  constraints.py  every_other_word.py  infilling.py  product_of_experts.py  prompt_intersection.py
lampl/: __init__.py  llama.py  llama_cpp.py  model.py  smc.py  util.py
llamppl/: __init__.py  constants.py  context.py  llama_cpp.py  model.py  token.py
llamppl/distributions/: categorical.py  distribution.py  geometric.py  logcategorical.py  tokendist.py  transformer.py
llamppl/inference/: beam.py  fearnhead_clifford.py  smc_standard.py  smc_steer.py
